[package]
name = "rayon-macro"
version = "0.2.0"
authors = ["Josh Stone <cuviper@gmail.com>"]
description = "Macros enabling parallelism using the rayon crate"
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/rayon-rs/rayon-macro"
documentation = "https://docs.rs/rayon-macro/"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]
edition = "2018"
exclude = ["bors.toml", ".github/*"]

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1.2.1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["fold", "full"] }

[dev-dependencies]
rayon = "1.3"
