[package]
name = "rayon-macro-hack"
version = "0.1.0"
authors = ["Josh Stone <cuviper@gmail.com>"]
description = "Implementation details of rayon-macro"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/rayon-rs/rayon-macro/hack"
documentation = "https://docs.rs/rayon-macro-hack/"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5.9"
syn = { version = "1", features = ["fold", "full"] }
quote = "1"
